--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -84,6 +84,7 @@
             <div class="playlist">
                 <div class="tracks">
                     <div class="playlist-info">here will be displayed your generated playlist</div>
+                    <div class="login"></div>
                 </div>
             </div>
         </div>
