--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -102,7 +102,13 @@
                     <label for="contact_terms">Accept terms</label>
                 </div>
                 <input type="button" value="send" id="contact_button" name="contact_button">
+                <input type="button" id="show_messages"value="show my messages">
             </form>
+            
+            <div class="messages">
+                <div class="messages_lines"></div>
+                <div id="close_messages_btn">X</div>
+            </div>
         </div>
     </footer>
 </body>
