--- a/app/static/styles/form.css
+++ b/app/static/styles/form.css
@@ -145,3 +145,35 @@ form h1{
     background-color: rgba(151, 151, 151, 0.411);
 }
 
+.messages{
+    position:fixed;
+    top:0;
+    height: 0;
+    background-color: white;
+    width: 100%;
+    height: 100vh;
+    z-index: 4;
+    display: none;
+    overflow-y: scroll;
+}
+
+#close_messages_btn{
+    position: inherit;
+    z-index: 5;
+    top:30px;
+    right:40px;
+    font-size: 25pt;
+    font-family: Arial;
+    font-weight: bolder;
+    cursor: pointer;
+
+}
+
+.message-line{
+    text-align: left;
+    margin:40px;
+    width: 50%;
+    inline-size: 30%;
+    overflow-wrap: break-word;
+
+}
